# jp-scripts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  HANDBOOK.md  Makefile  README.md  TECH_DEBT_AUDIT.md  TECH_DEBT_AUDIT_2025-11-30_COMPLETED.md  TECH_DEBT_AUDIT_2025-12-01_COMPLETED.md  coverage.json  jp-scripts_README.md  manifest.yaml  pyproject.toml  release-please-config.json
.claude/: CLAUDE.md
.codex/prompts/: new-cmd.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  codeql.yml  codex-review.yml  release.yml
.hypothesis/constants/: 02b833c6c129bccf  02e1d0cfbb507b17  07a15d52cc4539a9  084725e336c6ba45  0872eb4ebd175212  0e4898502938a04f  108ec7a369312aab  19d654294cbdd17b  1b3e6a731420ba79  1ed1e3c4c5548623  229a55dd829f13af  264829f231edf96d  2cc3820812cb60c1  2eadf7eae0e7b337  31c04e0922b99a8b  36853a32b984d648  3775e754163364de  3ae12b47788d2807  3c684fe76726e1f8  3d2c9802e89ad5ff  3f9dfe9d908c15f5  4285398ff4571473  4ed321a3d274a5d5  50998a96477ce8b6  537a80fc0f535815  5afbd42e9c4e0f17  624f1218a443c92d  648cd66a8bc853ea  65eca004b330611b  742a83ef7ee2718e  749856daaf96643f  7d199837d3aac27b  81b4baed0dd5bc53  842e7673d5479789  86ac95742d6f8880  8a2984a251507452  8d11de42015ac781  90d3b6c03924a89b  92f7872604eeb8db  a3d8652b287dfa44  (+19 more)
.hypothesis/examples/04e6b3400353b141/: 14d684ee3fdeb2ae
docs/: ARCHITECTURE.md  ARCHITECTURE_HARDENING_ROADMAP.md  ARCHITECTURE_HARDENING_ROADMAP_COMPLETED.md  CLI_REFERENCE.md  CODE_QUALITY_ROADMAP.md  CODE_QUALITY_ROADMAP_COMPLETED.md  EXTENDING.md  README.md  REFACTORING_ROADMAP.md  SHELL_GOVERNANCE_CODEX_ROADMAP.md  SHELL_GOVERNANCE_CODEX_ROADMAP_COMPLETED.md  UNIFIED_ARCHITECTURAL_REFACTOR_ROADMAP.md  UNIFIED_ARCHITECTURAL_REFACTOR_ROADMAP_COMPLETED.md  jpscripts-audit-roadmap.md
legacy/lib/: config.sh  fs.sh  fzf.sh
legacy/registry/: commands.json
lib/: deps.sh  fzf.sh  git.sh  log.sh
registry/: commands.json
scripts/: enforce_constitution.py
src/jpscripts/: __init__.py  __main__.py  main.py  mcp_server.py
src/jpscripts/agent/: __init__.py  archive.py  circuit.py  context.py  engine.py  execution.py  factory.py  governance.py  middleware.py  models.py  ops.py  patching.py  prompting.py  single_shot.py  tools.py  tracing.py  turn_processing.py  types.py
src/jpscripts/ai/: __init__.py  tokens.py
src/jpscripts/analysis/: __init__.py  cache.py  complexity.py  dependency_walker.py  skeleton.py  structure.py
src/jpscripts/capabilities/: __init__.py  registry.py
src/jpscripts/commands/: __init__.py  agent.py  context.py  evolve.py  git_extra.py  git_ops.py  handbook.py  init.py  map.py  memory.py  nav.py  notes.py  search.py  serialize.py  system.py  team.py  trace.py  ui.py  watch.py  web.py
src/jpscripts/core/: __init__.py  agent.py  command_validation.py  complexity.py  config.py  console.py  context.py  context_gatherer.py  cost_tracker.py  dag.py  decorators.py  dependency_walker.py  diagnostics.py  engine.py  error_middleware.py  errors.py  git.py  git_ops.py  governance.py  mcp_registry.py  memory.py  merge_resolver.py  nav.py  notes_impl.py  parallel_swarm.py  rate_limit.py  registry.py  replay.py  result.py  runtime.py  safety.py  search.py  security.py  serializer.py  structure.py  system.py  team.py  templates.py  tokens.py  ui.py  (+1 more)
src/jpscripts/core/agent/: __init__.py  context.py  execution.py  prompting.py  strategies.py
src/jpscripts/core/engine/: __init__.py  governance_enforcer.py  response_handler.py  safety_monitor.py  (+2 more)
src/jpscripts/engine/: __init__.py  models.py  tool_executor.py  trace_recorder.py
src/jpscripts/evolution/: __init__.py  prompting.py  types.py  verification.py
src/jpscripts/features/: __init__.py
src/jpscripts/git/: __init__.py  client.py  ops.py
src/jpscripts/governance/: __init__.py  ast_checker.py  compliance.py  config.py  diff_parser.py  secret_scanner.py  types.py
src/jpscripts/mcp/: __init__.py  server.py
src/jpscripts/memory/: __init__.py  api.py  patterns.py  retrieval.py  store.py
src/jpscripts/net/: __init__.py  search.py  web.py
src/jpscripts/providers/: __init__.py  anthropic.py  codex.py  factory.py  openai.py
src/jpscripts/structures/: __init__.py  dag.py
src/jpscripts/swarm/: __init__.py  agent_adapter.py  controller.py  types.py  worktree.py
src/jpscripts/system/: __init__.py  network.py
src/jpscripts/templates/: agent_system.json.j2  agent_system.xml.j2  safety_rules.yaml  swarm_architect.j2  swarm_qa.j2
src/jpscripts/ui/: __init__.py  agent_ui.py
tests/: conftest.py  test_smoke.py
tests/contract/: __init__.py  test_provider_interface.py  test_providers.py
tests/integration/: test_agent_real.py  test_end_to_end.py  test_mcp_security.py  test_mcp_server.py  test_repair_loop.py  test_swarm_real.py
tests/mocks/: __init__.py  mock_provider.py
tests/properties/: test_path_validation_props.py  test_token_budget_props.py
tests/security/: __init__.py  test_command_injection.py  test_context_security.py  test_governance_patch.py  test_red_team.py  test_safety_middleware.py  test_symlink_attacks.py
tests/unit/: test_agent.py  test_agent_orchestrator.py  test_agent_prompting.py  test_circuit_breaker_threading.py  test_complexity.py  test_context.py  test_core_search.py  test_core_web.py  test_dag.py  test_dependency_walker.py  test_dry_run_and_ast.py  test_error_middleware.py  test_evolve.py  test_git_extra.py  test_git_ops.py  test_governance.py  test_governance_destructive.py  test_governance_extended.py  test_json_extraction.py  test_mcp_filesystem.py  test_mcp_registry.py  test_mcp_tools.py  test_memory.py  test_memory_integrity.py  test_memory_retrieval.py  test_memory_store.py  test_merge_resolver.py  test_nav.py  test_notes_commands.py  test_notes_core.py  test_otel_tracing.py  test_parallel_swarm.py  test_providers.py  test_rate_limit.py  test_robust_json.py  test_security_extended.py  test_security_hardened.py  test_serializer.py  test_shell_policy.py  test_swarm_controller.py  (+8 more)
(+48 files in other folders)
