[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "jpscripts"
version = "0.4.3"
description = "A modern, typed Python CLI for the jp-scripts toolbox."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jp-scripts maintainers" }]
dependencies = [
  "typer>=0.12.3",
  "click>=8.1.7,<8.2",
  "rich>=13.7.0",
  "GitPython>=3.1.43",
  "pydantic>=2.7.0",
  "psutil>=5.9.0",
  "pyperclip>=1.8.2",
  "pathspec>=0.11.0",
  "trafilatura>=1.6.0",
  "PyYAML>=6.0",
  "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]
ai = [
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0",
]

[project.scripts]
jp = "jpscripts.main:app"

[project.entry-points."mcp.servers"]
jpscripts = "jpscripts.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jpscripts"]
