[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "jpscripts"
version = "0.9.0"
description = "A modern, typed Python CLI for the jp-scripts toolbox."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jp-scripts maintainers" }]
dependencies = [
  "typer>=0.12.3",
  "click>=8.1.7,<9",
  "rich>=13.7.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0,<3",
  "psutil>=5.9.0",
  "pyperclip>=1.8.2",
  "pathspec>=0.11.0",
  "PyYAML>=6.0",
  "ruamel.yaml>=0.17.0",
  "tiktoken>=0.7.0",
  "watchdog>=4.0.0",
  "mcp>=0.1.0,<2",
  "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "hypothesis>=6.100.0",
  "mypy>=1.11.0",
  "types-psutil>=5.9.5.20240819",
  "types-PyYAML>=6.0.12.20240917",
  "types-pyperclip>=1.8.2.7",
  "pandas-stubs>=2.0.0",
  "ruff>=0.4.0",
  "pdoc>=14.0.0",
  "gitpython>=3.1.0",
]
ai = [
  "trafilatura>=1.6.0",
  "sentence-transformers>=3.0.0",
  "lancedb>=0.9.0",
]
providers = [
  "anthropic>=0.30.0",
  "openai>=1.30.0",
]
otel = ["opentelemetry-api>=1.27.0", "opentelemetry-sdk>=1.27.0"]

[project.scripts]
jp = "jpscripts.main:cli"

[project.entry-points."mcp.servers"]
jpscripts = "jpscripts.mcp.server:main"

[tool.hatch.build]
include = ["src/jpscripts/templates/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/jpscripts"]

[tool.pytest.ini_options]
markers = ["slow: mark tests that take longer or hit external boundaries"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "trafilatura.*",
  "sentence_transformers.*",
  "lancedb.*",
  "mcp.*",
  "watchdog.*",
  "tiktoken.*",
  "pathspec.*",
  "ruamel.*",
  "opentelemetry.*",
  "openai.*",
  "anthropic.*",
]
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "none"
ignore = [
  "lancedb",
  "opentelemetry",
  "ruamel",
  "sentence_transformers",
  "trafilatura",
  "mcp",
  "watchdog",
  "tiktoken",
  "pathspec",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
# Explicitly force "Black" style formatting
quote-style = "double"
indent-style = "space"
docstring-code-format = true # Awesome feature: formats code snippets INSIDE docstrings

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (imports)
    "B",      # flake8-bugbear (bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern syntax)
    "SIM",    # flake8-simplify (cleaner logic) -- NEW
    "RUF",    # Ruff-specific rules -- NEW
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (Typer pattern)
    "E402",   # module level import not at top
    "B904",   # raise from
    "B905",   # zip strict
    "SIM117", # nested with statements (readability preference in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["jpscripts"]
# This makes your imports look cleaner by grouping strict/standard/local
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.coverage.run]
branch = true
source = ["src/jpscripts"]
omit = [
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "\\.\\.\\.",  # ellipsis in Protocol/ABC stubs
]
show_missing = true
skip_covered = false
